Move pages aronud to have better URLs and a better structure

--- a/docs/06.contribute/05.doc/02.markdown_guide.mdx
+++ b/docs/06.contribute/05.doc/02.markdown_guide.mdx
@@ -67,11 +67,11 @@ will be displayed as such:
 It is the same for the documentation pages, except that the link is internal. The page name is its default route, as defined in its page header:
 
 ```markdown
-[Wiki Page](/contribute/write_documentation/)
+[Wiki Page](/contribute/doc/)
 ```
 
 The link will return to the page with the correct language setting if the page exists, or defaults to the next available language (French, usually):
-[Wiki page](/contribute/write_documentation/)
+[Wiki page](/contribute/doc/)
 
 :::tip
 Note that language codes are thus not to be included at the beginning of the links to other documentation pages: `/en`, `/fr`, etc. are superfluous.
@@ -114,10 +114,10 @@ To display images, the principle is the same as for links, except that a `!` is 
 It is possible to make a link with an image, for example:
 
 ```markdown
-[![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
+[![YunoHost Logo](/img/logo.png)](/contribute/doc/)
 ```
 
-[![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
+[![YunoHost Logo](/img/logo.png)](/contribute/doc/)
 
 The insert of *text to be displayed if the image cannot be loaded* between the brackets in the image link is not mandatory but strongly recommended.
 
