--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -39,7 +39,7 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-  Improve this documentation by [writing new pages](/contribute/write_documentation/) or translating existing ones to your language.
+  Improve this documentation by [writing new pages](/contribute/doc/) or translating existing ones to your language.
   </Column>
 </Columns>
 
@@ -93,4 +93,4 @@ import Link from '@docusaurus/Link';
     Sysadmins, web developers, designers and pythonists <Link to="https://github.com/YunoHost" target="_blank">are welcome</Link>!  
     Learn [how to contribute](/contribute/dev/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
   </Column>
-</Columns> 
+</Columns>
