--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.doc/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.doc/02.markdown_guide.mdx
@@ -67,11 +67,11 @@ s'affichera comme tel :
 C'est identique pour les pages de la documentation, excepté que le lien est interne. Le nom de la page est sa route par défault définie dans son *header*:
 
 ```markdown
-[Page du wiki](/contribute/write_documentation/)
+[Page du wiki](/contribute/doc/)
 ```
 
 Le lien renverra vers la page avec la bonne configuration de langue si la page existe, ou vers une autre langue disponible (l'anglais, généralement) si elle n'existe pas.
-[Page du wiki](/contribute/write_documentation/)
+[Page du wiki](/contribute/doc/)
 
 ! Notez qu'il ne faut donc pas préciser le code de langue au début des liens vers d'autres pages de la documentation : `/fr`, `/en`, etc. sont superflus.
 
@@ -110,10 +110,10 @@ Pour afficher des images, le principe est identique aux liens, excepté l'ajout 
 Il est possible de faire un lien avec une image, exemple :
 
 ```markdown
-[![Logo YunoHost](/img/logo.png)](/contribute/write_documentation/)
+[![Logo YunoHost](/img/logo.png)](/contribute/doc/)
 ```
 
-[![Logo YunoHost](/img/logo.png)](/contribute/write_documentation/)
+[![Logo YunoHost](/img/logo.png)](/contribute/doc/)
 
 L'encart de *texte à afficher en cas d'impossibilité de chargement de l'image* entre les crochets dans le lien de l'image n'est pas obligatoire mais fortement recommandé.
 
