--- a/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/05.doc/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/05.doc/index.mdx
@@ -4,7 +4,7 @@ template: docs
 taxonomy:
     category: docs
 routes:
-  default: '/write_documentation'
+  default: '/doc'
 ---
 
 ## Über GitHub
@@ -63,17 +63,17 @@ template: docs
 taxonomie: 
     category: docs 
 routes: 
-  default: '/write_documentation' 
+  default: '/doc' 
 --- 
 ``` 
 1. Die Kopfzeile beginnt und endet mit einer Zeile, die `---` enthält
 2. Der `title:` verwaltet die erste Titel-Überschrift der Seite, ihren Namen im Navigationsmenü links und den Namen des Browser-Tab`s
 3. Die Punkte `template` und `taxonomie` sollten immer unverändert bleiben. Sie weisen Grav an, das richtige Theme zu verwenden und die Seiten richtig auf zu bauen. 
-4. Die Schlüssel `routes` und `default` machen die Seite standardmäßig unter `https://yunohost.org/docs/write_documentation` verfügbar, um sie nicht unter `https://yunohost.org/docs/contribute/write_documentation` aufrufen zu müssen, wo sie in der Verzeichnishierarchie gespeichert ist. 
+4. Die Schlüssel `routes` und `default` machen die Seite standardmäßig unter `https://yunohost.org/docs/doc` verfügbar, um sie nicht unter `https://yunohost.org/docs/contribute/doc` aufrufen zu müssen, wo sie in der Verzeichnishierarchie gespeichert ist. 
 
 ## Syntax 
 
-Sie können die Markdown-Syntax verwenden. Weitere Informationen finden Sie in der [Dokumentation](/contribute/write_documentation/markdown_guide).
+Sie können die Markdown-Syntax verwenden. Weitere Informationen finden Sie in der [Dokumentation](/contribute/doc/markdown_guide).
 
 ! Beachten Sie, dass Sprachcodes nicht am Anfang der Links zu anderen Dokumentationsseiten stehen dürfen: `/en`,` /fr` usw. sind überflüssig. 
 
