Update redirects and internal links after reorganization

--- a/docs/03.admin/50.troubleshooting/index.mdx
+++ b/docs/03.admin/50.troubleshooting/index.mdx
@@ -4,4 +4,4 @@ title: Troubleshooting
 
 This section contains specific tips to troubleshoot common issues.
 
-If you are looking for help, consider having a look at [the forum](https://forum.yunohost.org/), [the support chat room](/community/chat_rooms), [the 'Help' page](/community/help) and [how to ask for help efficiently](/community/asking_for_help_efficiently)
+If you are looking for help, consider having a look at [the forum](https://forum.yunohost.org/), [the support chat room](/community/chat_rooms), [the 'Help' page](/community/help) and [how to ask for help efficiently](/community/ask_for_help)
