--- a/docs/06.contribute/05.doc/01.apps_documentation.mdx
+++ b/docs/06.contribute/05.doc/01.apps_documentation.mdx
@@ -7,7 +7,7 @@ title: Guide to writing application documentation
 
 :::caution
 This section is being worked on and is outdated.
-Please read the accurate informations [here](/contribute/packaging_apps/doc) while we rewrite this page.
+Please read the accurate informations [here](/contribute/apps/doc) while we rewrite this page.
 
 :::
 
