--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -76,7 +76,7 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-    Extend YunoHost capabilities by [packaging new services and web applications](/contribute/packaging_apps/).  
+    Extend YunoHost capabilities by [packaging new services and web applications](/contribute/apps/).  
     Have a look of [what has been done yet](https://apps.yunohost.org/)!
   </Column>
 </Columns>
@@ -91,6 +91,6 @@ import Link from '@docusaurus/Link';
   <Column className='text--center'>
     You can involve in the YunoHost's development regardless of your skill.
     Sysadmins, web developers, designers and pythonists <Link to="https://github.com/YunoHost" target="_blank">are welcome</Link>!  
-    Learn [how to contribute](/contribute/dev/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
+    Learn [how to contribute](/contribute/core/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
   </Column>
 </Columns>
