--- a/i18n/de/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
@@ -91,7 +91,7 @@ If you really want to have a feature implemented or documented, or an app packag
 
 #### What is YunoHost's policy regarding the apps included in the official catalog ?
 
-See [this page](/contribute/packaging_apps/policy)
+See [this page](/contribute/apps/policy)
 
 #### Why won't you include [feature X] ?
 
