--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.apps/80.resources/packaging_apps_virtualbox.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.apps/80.resources/packaging_apps_virtualbox.mdx
@@ -11,7 +11,7 @@ Il y a principalement deux raisons pour préférer l'usage d'un serveur virtuel 
 - Vous pouvez torturer à loisir un serveur virtuel sans courir le risque de le casser, puisque vous pourrez toujours restaurer un état précédent. Alors qu'il serait dommage de casser son propre serveur !
 - Un serveur virtuel sera restauré avant de travailler dessus, pour garder en permanence un système sans résidus d'une précédente installation. Cela permet de se rapprocher au plus près d'une première installation par un utilisateur.
 
-Nous parlerons ici de VirtualBox, pour son approche graphique facile à utiliser. Si vous préférez une interface en ligne de commande pour la gestion de la machine virtuelle, tournez-vous de préférence vers [ynh-dev](/contribute/dev/).
+Nous parlerons ici de VirtualBox, pour son approche graphique facile à utiliser. Si vous préférez une interface en ligne de commande pour la gestion de la machine virtuelle, tournez-vous de préférence vers [ynh-dev](/contribute/core/).
 
 ## Installer VirtualBox
 
@@ -22,7 +22,7 @@ Quel que soit votre système, il ne devrait pas être nécessaire d'installer l'
 
 ## Installer YunoHost sur VirtualBox
 
-Suivez simplement la documentation idoine pour l'[installation sur VirtualBox](/contribute/packaging_apps/resources/packaging_apps_virtualbox) puis la documentation sur la [post-installation](/category/after-installation).
+Suivez simplement la documentation idoine pour l'[installation sur VirtualBox](/contribute/apps/resources/packaging_apps_virtualbox) puis la documentation sur la [post-installation](/category/after-installation).
 
 Lors de la post-installation, il est inutile d'utiliser un nom de domaine en `.nohost.me` ou `.noho.st`, votre serveur virtuel ne sera pas accessible depuis l'extérieur de votre réseau local.  
 Nous préférerons l'usage d'un faux nom de domaine qui restera cantonné au réseau local. Par exemple, `yunohost.packaging`.
