--- a/i18n/fr/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/index.mdx
@@ -7,11 +7,11 @@ sidebar_position: 0
 
 Ceci est la documentation pour [YunoHost, un système d’exploitation libre visant à simplifier l'administration des serveurs et à démocratiser l'auto-hébergement](/overview/what_is_yunohost).
 
-En tant que futur administrateur de votre propre serveur, consultez le [guide d'administration](/category/administration-guide) pour en savoir plus sur l'auto-hébergement, l'installation de votre serveur YunoHost et l'installation de vos premières applications.
+En tant que futur administrateur de votre propre serveur, consultez le [guide d'administration](/admin) pour en savoir plus sur l'auto-hébergement, l'installation de votre serveur YunoHost et l'installation de vos premières applications.
 
 Vous pouvez consulter le [catalogue d'applications](https://apps.yunohost.org) pour parcourir les applications qui peuvent être installées sur un serveur (bien que vous puissiez également l'explorer directement à partir de votre interface d'administration).
 
-La [Communauté](/category/community) est là pour vous si vous avez besoin d'aide : venez [chatter](/community/chat_rooms) avec nous ou contactez-nous sur le [forum](/community/forum) !
+La [Communauté](/community) est là pour vous si vous avez besoin d'aide : venez [chatter](/community/chat_rooms) avec nous ou contactez-nous sur le [forum](/community/forum) !
 
 {/*
 TODO:
