--- a/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
@@ -7,11 +7,11 @@ sidebar_position: 0
 
 Это документация для [YunoHost, свободной операционной системы, направленной на упрощение администрирования сервера и демократизацию самостоятельного хостинга](/overview/what_is_yunohost).
 
-Как будущий администратор вашего собственного сервера, перейдите к [Руководству администратора](/category/administration-guide), чтобы узнать больше о самостоятельном хостинге, о том, как установить сервер YunoHost и ваши первые приложения.
+Как будущий администратор вашего собственного сервера, перейдите к [Руководству администратора](/admin), чтобы узнать больше о самостоятельном хостинге, о том, как установить сервер YunoHost и ваши первые приложения.
 
 Вы можете ознакомиться с [каталогом приложений](https://apps.yunohost.org), чтобы просмотреть приложения, которые могут быть установлены на сервере (хотя вы также можете ознакомиться с ним непосредственно из своего интерфейса администратора!)
 
-[Сообщество](/category/community) здесь для вас, если вам нужна помощь: присоединяйтесь к нам в [чат](/community/chat_rooms) или свяжитесь с нами на [форуме](/community/forum)!
+[Сообщество](/community) здесь для вас, если вам нужна помощь: присоединяйтесь к нам в [чат](/community/chat_rooms) или свяжитесь с нами на [форуме](/community/forum)!
 
 {/*
 TODO:
