--- a/i18n/de/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/index.mdx
@@ -11,7 +11,7 @@ Weitere Informationen zum Selbsthosting, zur Installation deines eigenen YunoHos
 
 Du kannst in den [Anwendungskatalog](https://apps.yunohost.org) schauen, um die Apps anzusehen, die auf deinem Server installiert werden können (Natürlich geht das auch direkt über deine Administrationsoberfläche!).
 
-Wenn du Hilfe benötigst, ist die [Community](/category/community) für dich da: [Chatte](/community/chat_rooms) mit uns oder schau in das [Forum](/community/forum)!
+Wenn du Hilfe benötigst, ist die [Community](/community) für dich da: [Chatte](/community/chat_rooms) mit uns oder schau in das [Forum](/community/forum)!
 
 {/*
 TODO:
