--- a/i18n/it/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
@@ -88,7 +88,7 @@ Se desiderate che la vostra app preferita sia implementata e documentata [aiutat
 
 #### What is YunoHost's policy regarding the apps included in the official catalog ?
 
-See [this page](/contribute/packaging_apps/policy)
+See [this page](/contribute/apps/policy)
 
 #### Perché non includete la [caratteristica X]?
 
