--- a/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
@@ -7,11 +7,11 @@ sidebar_position: 0
 
 uesto sito contiene la documentazione di [YunoHost, un sistema operativo libero che si pone come obiettivo quello di semplificare l'amministrazione di un server e democraticizzare il self-hosting](/overview/what_is_yunohost).
 
-Nell'attesa che possiate occuparvi di un vostro server, potete cominciare a consultare la [guida dell'amministratore](/category/administration-guide) per conoscere il self-hosting, come installare YunoHost sul vostro server e come installare le vostre prime applicazioni.
+Nell'attesa che possiate occuparvi di un vostro server, potete cominciare a consultare la [guida dell'amministratore](/admin) per conoscere il self-hosting, come installare YunoHost sul vostro server e come installare le vostre prime applicazioni.
 
 Potete esplorare il [catalogo delle applicazioni](https://apps.yunohost.org) installabili sul vostro server (che può essere comunque consultato direttamente dalla vostra interfaccia d'amministrazione!)
 
-La [comunità](/category/community) è disponibile se avete bisogno di aiuto: potete venire a discutere nelle [stanze di discussione](/community/chat_rooms) oppure porre le vostre domande sul [forum](/community/forum)!
+La [comunità](/community) è disponibile se avete bisogno di aiuto: potete venire a discutere nelle [stanze di discussione](/community/chat_rooms) oppure porre le vostre domande sul [forum](/community/forum)!
 
 {/*
 TODO:
