--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -4,7 +4,7 @@
     "description": "The title of the footer links column with title=Community in the footer"
   },
   "copyright": {
-    "message": "Build with Docusaurus for YunoHost",
+    "message": "Fait avec Docusaurus pour YunoHost",
     "description": "The footer copyright"
   },
   "link.title.Contribute": {
