--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -1,6 +1,6 @@
 {
   "link.title.Community": {
-    "message": "Community",
+    "message": "Communauté",
     "description": "The title of the footer links column with title=Community in the footer"
   },
   "copyright": {
@@ -8,11 +8,11 @@
     "description": "The footer copyright"
   },
   "link.title.Contribute": {
-    "message": "Contribute",
+    "message": "Contribuer",
     "description": "The title of the footer links column with title=Contribute in the footer"
   },
   "link.item.label.Website": {
-    "message": "Website",
+    "message": "Site web",
     "description": "The label of footer link with label=Website linking to https://yunohost.org/"
   },
   "link.item.label.Forum": {
@@ -20,7 +20,7 @@
     "description": "The label of footer link with label=Forum linking to https://forum.yunohost.org/"
   },
   "link.item.label.Donate": {
-    "message": "Donate",
+    "message": "Donner",
     "description": "The label of footer link with label=Donate linking to https://donate.yunohost.org/"
   },
   "link.item.label.GitHub (core)": {
@@ -32,7 +32,7 @@
     "description": "The label of footer link with label=GitHub (apps) linking to https://github.com/YunoHost-Apps"
   },
   "link.item.label.Translate": {
-    "message": "Translate",
+    "message": "Traduire",
     "description": "The label of footer link with label=Translate linking to https://translate.yunohost.org/"
   }
 }
