fix link to scripts

--- a/docs/06.contribute/05.doc/index.mdx
+++ b/docs/06.contribute/05.doc/index.mdx
@@ -130,4 +130,4 @@ shortcode-core
 
 Some pages of the documentation are automatically or dynamically generated.
 
-See the [generation script](/scripts/generate_docs.sh).
+See the [generation script](https://github.com/YunoHost/doc/blob/docusaurus/scripts/generate_docs.sh).
