install: fix images

--- a/docs/02.install/20.install_on/arm_board.mdx
+++ b/docs/02.install/20.install_on/arm_board.mdx
@@ -4,7 +4,7 @@ description: Looks like a Raspberry Pi, isn't quite one
 # pagination_next: administration-guide/initial-setup/index
 sidebar_position: 2
 sidebar_custom_props:
-  doc_card_image: /img/olinuxino.png
+  doc_card_image: /img/icons/olinuxino.png
 ---
 
 import Figure from '@site/src/components/Figures';
