--- a/docs/02.install/20.install_on/raspberry_pi.mdx
+++ b/docs/02.install/20.install_on/raspberry_pi.mdx
@@ -4,7 +4,7 @@ description: Our preferred baked boards
 # pagination_next: administration-guide/initial-setup/index
 sidebar_position: 1
 sidebar_custom_props:
-  doc_card_image: /img/raspberrypi.png
+  doc_card_image: /img/icons/raspberrypi.png
 ---
 
 import Figure from '@site/src/components/Figures';
