--- a/docs/02.install/20.install_on/regular_computer.mdx
+++ b/docs/02.install/20.install_on/regular_computer.mdx
@@ -4,7 +4,7 @@ description: An old computer or a huge x86 rack server
 # pagination_next: administration-guide/initial-setup/index
 sidebar_position: 4
 sidebar_custom_props:
-  doc_card_image: /img/computer.png
+  doc_card_image: /img/icons/icon-computer.png
 ---
 
 import Figure from '@site/src/components/Figures';
