--- a/docs/02.install/20.install_on/wsl.mdx
+++ b/docs/02.install/20.install_on/wsl.mdx
@@ -4,7 +4,7 @@ description: Experimental, for testing purposes
 # pagination_next: administration-guide/initial-setup/index
 sidebar_position: 6
 sidebar_custom_props:
-  doc_card_image: /img/wsl.png
+  doc_card_image: /img/icons/logo-wsl.png
 ---
 
 import Figure from '@site/src/components/Figures';
