--- a/docs/02.install/20.install_on/remote_server.mdx
+++ b/docs/02.install/20.install_on/remote_server.mdx
@@ -4,7 +4,7 @@ description: For cloud machines like VPS or dedicated servers
 # pagination_next: administration-guide/initial-setup/index
 sidebar_position: 3
 sidebar_custom_props:
-  doc_card_image: /img/vps.png
+  doc_card_image: /img/icons/icon-vps.png
 ---
 
 import Figure from '@site/src/components/Figures';
