Put arrows in titles of pages that redirect

--- a/docs/05.community/45.chatons.mdx
+++ b/docs/05.community/45.chatons.mdx
@@ -1,5 +1,5 @@
 ---
-title: Creating a CHATONS with YunoHost
+title: Create a CHATONS ↗
 ---
 
 import {DocumentedHardRedirect} from '@site/src/components/HardRedirects';
