--- a/docs/05.community/25.yunohost_project_organization.mdx
+++ b/docs/05.community/25.yunohost_project_organization.mdx
@@ -1,5 +1,5 @@
 ---
-title: Project organisation
+title: Project organisation ↗
 ---
 
 import {DocumentedHardRedirect} from '@site/src/components/HardRedirects';
