--- a/docs/06.contribute/15.core/forms.mdx
+++ b/docs/06.contribute/15.core/forms.mdx
@@ -139,7 +139,7 @@ FIXME i'm not sure we have this in code.
 Options are fields declaration that renders as form items, button, alert or text in the web-admin and printed or prompted in CLI.
 They are used in app manifests to declare the before installation form and in config panels.
 
-[Have a look at the app config panel doc](/packaging_config_panels) for details about Panels and Sections.
+[Have a look at the app config panel doc](/contribute/apps/advanced/config_panels) for details about Panels and Sections.
 
 ! IMPORTANT: as for Panels and Sections you have to choose an id, but this one should be unique in all this document, even if the question is in an other panel.
 
@@ -185,7 +185,7 @@ bind = "null"
     - else the value will be stored as the whole content of the file
     - you can use `__FINALPATH__` or `__INSTALL_DIR__` in your path to point to dynamic install paths
       - FIXME are other global variables accessible?
-  - [refer to `bind` doc for explaination and examples](#read-and-write-values-the)
+  - [refer to `bind` doc for explaination and examples](/contribute/apps/advanced/config_panels#the-bind-statement)
 
 ---
 
@@ -270,7 +270,7 @@ Available only in config panels.
 Renders as a `button` in the web-admin and can be called with `yunohost [app|domain|settings] action run <action_id>` in CLI.
 
 Every options defined in an action section (a config panel section with at least one `button`) is guaranted to be shown/asked to the user and available in `scripts/config`'s scope.
-[check examples in advanced use cases](#actions).
+[check examples in advanced use cases](/contribute/apps/advanced/config_panels#actions).
 
 #### Example
 
