Update dns_config.md:fix wrong DNS command

--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/20.dns_config.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/20.dns_config.mdx
@@ -13,7 +13,7 @@ Si utilizas un [dominio automático](/admin/tutorials/domains/dns_nohost_me) pro
 YunoHost provee una configuración DNS recomendada, accesible vía :
 
 - la webadmin, en Dominios > tu.dominio.tld > Configuración DNS ;
-- o la linea de comando, `yunohost domain dns-conf tu.dominio.tld`
+- o la linea de comando, `yunohost domain dns suggest tu.dominio.tld`
 
 Para algunas necesidades o instalaciones particulares, y si sabes lo que estás haciendo, a lo mejor tendrás que modificar esa recomendación o añadir otros registros (e.g. para administrar subdominios).
 
@@ -21,7 +21,7 @@ La configuración recomendada típicamente se parece a :
 
 ```bash
 #
-# Registros IPv4/IPv6 básicos 
+# Registros IPv4/IPv6 básicos
 #
 @ 3600 IN A 111.222.33.44
 * 3600 IN A 111.222.33.44
