--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/20.dns_config.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/20.dns_config.mdx
@@ -19,7 +19,7 @@ DNS (система доменных имен) - это система, кото
 YunoHost предоставляет рекомендуемую конфигурацию DNS, доступную через:
 
 - веб-администратор, Домены > `your.domain.tld` > DNS;
-- или в командной строке: `yunohost domain dns-conf your.domain.tld`
+- или в командной строке: `yunohost domain dns suggest your.domain.tld`
 
 Для конкретных нужд или конкретных настроек, и если вы знаете, что делаете, вы
 можете захотеть или быть вынуждены изменить их или добавить дополнительные (например, для обработки
