Fix links after reorg

--- a/i18n/de/docusaurus-plugin-content-docs/current/community/20.faq.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/community/20.faq.mdx
@@ -24,7 +24,7 @@ YunoHost könnte eine Distribution oder ein Betriebssystem genannt werden, aber 
 
 Zum Beispiel, wenn Sie Wordpress installieren möchten, müssten Sie einige Befehle eintippen, um Benutzer zu generieren, einen Webserver einrichten, einen SQL Server einrichten, das Wordpress Archiv herunterladen, entpacken, den Webserver konfigurieren, die SQL Datenbank konfigurieren und schließlich Wordpress einrichten. YunoHost übernimmt all das für Sie, zähmt das technische Chaos und "tippt alle Befehle für Sie", sodass Sie sich auf das konzentrieren können, was wirklich wichtig ist.
 
-Mehr Informationen finden Sie [hier](/admin/overview/what_is_yunohost) !
+Mehr Informationen finden Sie [hier](/admin/what_is_yunohost) !
 
 #### Kann ich meine eigene, persönliche Internetseite mit YunoHost betreiben ?
 
