--- a/i18n/de/docusaurus-plugin-content-docs/current/dev/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/dev/index.mdx
@@ -14,7 +14,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-    Talk about software freedom, [self-hosting](/admin/overview/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
+    Talk about software freedom, [self-hosting](/admin/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
   </Column>
 </Columns>
 
