--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.install/40.post_install/05.configuration.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.install/40.post_install/05.configuration.mdx
@@ -123,4 +123,4 @@ Pour plus d'instructions détaillées, ou pour en savoir plus à propos des cert
 
 ## 🎉 Félicitations !
 
-Vous avez maintenant un serveur plutôt bien configuré. Si vous découvrez YunoHost, nous vous recommandons de jeter un œil à [la visite guidée](/category/overview). Vous devriez aussi être en mesure d'[installer vos applications favorites](https://apps.yunohost.org). N'oubliez pas de [prévoir des sauvegardes](/category/backups) !
+Vous avez maintenant un serveur plutôt bien configuré. Si vous découvrez YunoHost, nous vous recommandons de jeter un œil à [la visite guidée](/admin/webadmin). Vous devriez aussi être en mesure d'[installer vos applications favorites](https://apps.yunohost.org). N'oubliez pas de [prévoir des sauvegardes](/category/backups) !
