--- a/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
@@ -5,7 +5,7 @@ sidebar_position: 0
 
 # Welcome to the YunoHost documentation!
 
-uesto sito contiene la documentazione di [YunoHost, un sistema operativo libero che si pone come obiettivo quello di semplificare l'amministrazione di un server e democraticizzare il self-hosting](/admin/overview/what_is_yunohost).
+uesto sito contiene la documentazione di [YunoHost, un sistema operativo libero che si pone come obiettivo quello di semplificare l'amministrazione di un server e democraticizzare il self-hosting](/admin/what_is_yunohost).
 
 Nell'attesa che possiate occuparvi di un vostro server, potete cominciare a consultare la [guida dell'amministratore](/admin) per conoscere il self-hosting, come installare YunoHost sul vostro server e come installare le vostre prime applicazioni.
 
