--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/01.overview/10.what_is_yunohost.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/01.overview/10.what_is_yunohost.mdx
@@ -5,7 +5,7 @@ description: " "
 
 <img src={require('/img/icons/logo-ynh_horizontal.png').default} alt="YunoHost logo" id="ynhlogo" style={{display: "block", textAlign: "center", margin: "auto"}}/>
 
-YunoHost это **операционная система** позволяющая легко администрировать **сервера**, и следовательно позволяет сделать [self-hosting](/admin/overview/self_hosting) надёжным, безопасным, этическим и лёгким. Это свободнораспространяемая библиотека которая поддерживается исключительно волонтёрами. Технически, это дистрибутив основанный на [Debian GNU/Linux](https://debian.org) и может быть установлен на [большое количество систем](/admin/install.
+YunoHost это **операционная система** позволяющая легко администрировать **сервера**, и следовательно позволяет сделать [self-hosting](/admin/self_hosting) надёжным, безопасным, этическим и лёгким. Это свободнораспространяемая библиотека которая поддерживается исключительно волонтёрами. Технически, это дистрибутив основанный на [Debian GNU/Linux](https://debian.org) и может быть установлен на [большое количество систем](/admin/install.
 
 ## Фичи
 
