--- a/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
@@ -5,7 +5,7 @@ sidebar_position: 0
 
 # Welcome to the YunoHost documentation!
 
-Это документация для [YunoHost, свободной операционной системы, направленной на упрощение администрирования сервера и демократизацию самостоятельного хостинга](/admin/overview/what_is_yunohost).
+Это документация для [YunoHost, свободной операционной системы, направленной на упрощение администрирования сервера и демократизацию самостоятельного хостинга](/admin/what_is_yunohost).
 
 Как будущий администратор вашего собственного сервера, перейдите к [Руководству администратора](/admin), чтобы узнать больше о самостоятельном хостинге, о том, как установить сервер YunoHost и ваши первые приложения.
 
