--- a/docs/admin/05.install/40.post_install/05.configuration.mdx
+++ b/docs/admin/05.install/40.post_install/05.configuration.mdx
@@ -127,4 +127,4 @@ For more detailed instructions, or to lean more about SSL/TLS certificates, see 
 
 ## 🎉 Congratz!
 
-You now have a pretty well configured server. If you're new to YunoHost, we recommend to have a look at [the guided tour](/category/overview). You should also be able to [install your favourite applications](https://apps.yunohost.org/). Don't forget to [plan backups](/category/backups) !
+You now have a pretty well configured server. If you're new to YunoHost, we recommend to have a look at [the guided tour](/admin/webadmin). You should also be able to [install your favourite applications](https://apps.yunohost.org/). Don't forget to [plan backups](/category/backups) !
