--- a/docs/community/05.faq.mdx
+++ b/docs/community/05.faq.mdx
@@ -25,7 +25,7 @@ YunoHost is a distribution, in the sense that it is a purpose-specific version o
 
 For instance, if you wanted to install WordPress, you would need to type a bunch of commands to create some users, setup a web server, setup a SQL server, download the WordPress archive, uncompress it, configure the web server, configure the SQL database, and finally configure WordPress. YunoHost handles the technical details and "types all these commands for you", so that you can focus on what really matters.
 
-More info on [this page](/admin/overview/what_is_yunohost)!
+More info on [this page](/admin/what_is_yunohost)!
 
 ### Can I host my own personal website with YunoHost?
 
